Done: Login, register, shell_conext.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,11 @@
         <div>
             Microblog:
             <a href="{{ url_for('index') }}">Home</a>
-            <a href="{{ url_for('login') }}">Login</a>
+            {% if current_user.is_anonymous %}
+                <a href="{{ url_for('login') }}">Login</a>
+            {% else %}
+                <a href="{{ url_for('logout')}}">Logout</a>
+            {% endif %}
         </div>
         <hr>
         {% with messages = get_flashed_messages() %}
@@ -28,3 +32,10 @@
         {% endblock %}
     </body>
 </html>
+
+<!--
+Свойство is_anonymous является одним из атрибутов, которые Flask-Login
+добавляет к объектам пользователя через класс UserMixin.
+Выражение current_user.is_anonymous вернет True, только если пользователь
+не войдет в систему.
+-->
