--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,23 +15,22 @@
             <a href="{{ url_for('explore') }}">Explore</a>
             {% if current_user.is_anonymous %}
                 <a href="{{ url_for('login') }}">Login</a>
-            {% else %}                
+            {% else %}
                 <a href="{{ url_for('user', username=current_user.username) }}">Profile</a>
                 <a href="{{ url_for('logout')}}">Logout</a>
             {% endif %}
         </div>
         <hr>
-        {% with messages = get_flashed_messages() %}
-            {% if messages %}
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
                 <ul>
                     {% for message in messages %}
                         <li>{{ message }}</li>
                     {% endfor %}
                 </ul>
-            {% endif %}
-        {% endwith %}
-        {% block content %}
-        {% endblock %}
+                {% endif %}
+            {% endwith %}
+        {% block content %}{% endblock %}
     </body>
 </html>
 
